Add microphone selection analysis

--- a/notebooks/DynamicAnalysis.ipynb
+++ b/notebooks/DynamicAnalysis.ipynb
@@ -38,23 +38,23 @@
     "#exp_name = '2020_10_30_dynamic_test'; degree=0; start_idx=0 #degree=90; \n",
     "#exp_name = '2020_10_30_dynamic_move'; degree=0; start_idx=0\n",
     "#exp_name = '2020_11_03_sweep_old'; degree=90; start_idx = 20\n",
+    "#exp_name = '2020_11_03_sweep'; degree=90; start_idx = 20\n",
     "\n",
-    "\n",
-    "# TODO: clean the csv file instead of reading only from start_idx here. \n",
-    "exp_name = '2020_11_03_sweep'; degree=90; start_idx = 20\n",
+    "#exp_name = '2020_11_10_buzzer'; degree=45; start_idx = 20\n",
+    "#exp_name = '2020_11_10_buzzer'; degree=0; start_idx = 20\n",
+    "exp_name = '2020_11_10_buzzer'; degree=90; start_idx = 20\n",
     "\n",
     "params = dict(\n",
     "    degree = degree,\n",
     "    props = False,\n",
     "    snr = False,\n",
-    "    motors = False,\n",
-    "    source = 'mono_linear',\n",
+    "    motors = True,\n",
+    "    source = None,\n",
     "    exp_name = exp_name\n",
     ")\n",
     "\n",
     "df, df_pos = read_df(**params)\n",
     "df.head()\n",
-    "f_wav, t_wav, spectrogram_wav = get_spec(**params)\n",
     "\n",
     "df = df.iloc[start_idx:]\n",
     "index_start = df.iloc[0]['index']\n",
@@ -71,11 +71,6 @@
    },
    "outputs": [],
    "source": [
-    "plt.figure()\n",
-    "plt.scatter(df_pos.timestamp.values, [1]*len(df_pos), label='df_pos')\n",
-    "plt.scatter(df.timestamp.values, [0]*len(df), label='df')\n",
-    "plt.legend()\n",
-    "\n",
     "start_pos = np.array([0, 0])\n",
     "positions = np.empty([len(df), 2])\n",
     "\n",
@@ -107,25 +102,242 @@
     "from audio_stack.beam_former import BeamFormer, normalize_rows, combine_rows\n",
     "import progressbar\n",
     "\n",
-    "combination_n = 5\n",
+    "combination_n = 10\n",
     "combination_method = \"sum\"\n",
     "normalization_method = \"none\"\n",
-    "method = \"mvdr\"\n",
-    "bin_selection = \"fixed\"; selected_hz = [800]\n",
+    "method = \"das\"\n",
+    "bin_selection = \"fixed\"; selected_hz = [4100]\n",
+    "\n",
+    "averaging = 'ma'\n",
+    "\n",
+    "#columns = range(len(df))\n",
+    "columns = list(range(len(df)))[::3]\n",
+    "\n",
+    "selected_idx = [np.argmin(np.abs(df.iloc[0].frequencies - hz)) for hz in selected_hz]\n",
     "\n",
     "# covariance averaging\n",
     "#averaging = 'iir'\n",
-    "#alpha = 0.5 # set to 1 for no effect\n",
-    "#R = None\n",
+    "#alpha = 0.5 # set to 1 for no effect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "times = (df.iloc[columns].audio_timestamp - df.iloc[0].audio_timestamp) / 1e6\n",
+    "signals_f = np.array([*df.iloc[columns]['signals_f']]) # n_times x n_mics x n_freqs\n",
+    "for i in range(signals_f.shape[1]):\n",
+    "    ax.plot(times, \n",
+    "            np.sum(np.abs(signals_f[:, i, selected_idx]), axis=1))\n",
+    "ax.set_ylim([1e-3, 2])\n",
+    "ax.legend([f\"mic{i}\" for i in range(row.signals_f.shape[0])])\n",
+    "ax.set_xlabel('time [s]')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# test different mic combinations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_heatmap(ax):\n",
+    "    extra_kwargs = dict(\n",
+    "        color='red',\n",
+    "        lw=2\n",
+    "    )\n",
+    "    angles = BeamFormer.theta_scan * 180 / np.pi\n",
     "\n",
-    "averaging = 'ma'\n",
-    "R_idx = 0; R_list = [[]] * combination_n\n",
+    "    start_orientation = orientations[~np.isnan(orientations)][0]\n",
+    "    raw_orientations =  start_orientation - orientations\n",
+    "    if degree != 45:\n",
+    "        raw_orientations += degree\n",
+    "        raw_orientations[raw_orientations < 0] += 360\n",
     "\n",
-    "mic_positions = df.iloc[0].mic_positions\n",
+    "    ax.pcolormesh(times, angles, raw_heatmap)\n",
+    "    ax.plot(times, raw_orientations, **extra_kwargs)\n",
+    "    ax.set_ylim(0, 360)\n",
+    "    ax.set_xlabel('time [s]')\n",
+    "    ax.set_ylabel('angle [deg]')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#mic_selection = [1, 2] #[1, 3] #list(range(4))\n",
+    "import itertools\n",
+    "\n",
+    "n_columns = len(columns)\n",
+    "\n",
+    "for num in [2, 3, 4]:\n",
+    "    \n",
+    "    combis = list(itertools.combinations(range(4), num))\n",
+    "    n_combis = len(combis)\n",
+    "    \n",
+    "    fig, axs = plt.subplots(1, n_combis, sharey=True, sharex=True, squeeze=False)\n",
+    "    axs = axs.reshape((n_combis,))\n",
+    "    fig.suptitle(f\"motors: {params['motors']}, degree: {params['degree']}\")\n",
+    "    fig.set_size_inches(15, 5)\n",
+    "    axs_i = 0\n",
+    "\n",
+    "    for mic_selection in combis:\n",
+    "        mic_positions = df.iloc[0].mic_positions[mic_selection, :]\n",
+    "        beam_former = BeamFormer(mic_positions=mic_positions)\n",
+    "\n",
+    "        R_idx = 0; R_list = [[]] * combination_n\n",
+    "        R = None\n",
+    "    \n",
+    "        angles = beam_former.theta_scan\n",
+    "        times = np.empty(n_columns)\n",
+    "        orientations = np.full(n_columns, np.nan)\n",
+    "        raw_heatmap = np.zeros((len(angles), n_columns))\n",
+    "\n",
+    "        i_col = 0\n",
+    "        dynamic_spectrum = None\n",
+    "        multi_spectrum = None\n",
+    "\n",
+    "        with progressbar.ProgressBar(max_value=n_columns, redirect_stdout=True) as p:\n",
+    "            for i in columns:\n",
+    "                row = df.iloc[i]\n",
+    "\n",
+    "                if bin_selection == \"fixed\":\n",
+    "                    signals_f = row.signals_f[:, selected_idx] # n_mics x n_freqs\n",
+    "                    signals_f = signals_f[mic_selection, :]\n",
+    "                    freqs = row.frequencies[selected_idx]\n",
+    "                else:\n",
+    "                    # TODO(FD): implement this\n",
+    "                    pass\n",
+    "\n",
+    "                orientation_deg = row.yaw_deg\n",
+    "                timestamp = row.timestamp\n",
+    "\n",
+    "                R_new = beam_former.get_correlation(signals_f.T) # n_freqs x n_mics x n_mics\n",
+    "                if averaging == 'iir':\n",
+    "                    if R is None:\n",
+    "                        R = R_new\n",
+    "                    else:\n",
+    "                        R = alpha*R_new + (1-alpha)*R\n",
+    "                elif averaging == 'ma':\n",
+    "                    R_list[R_idx] = R_new\n",
+    "                    R_idx = (R_idx + 1) % combination_n\n",
+    "                    R = np.mean([R_elem for R_elem in R_list if len(R_elem)], axis=0)\n",
+    "\n",
+    "                if method == 'mvdr':\n",
+    "                    raw_spectrum = beam_former.get_mvdr_spectrum(R, freqs)\n",
+    "                elif method == 'das':\n",
+    "                    raw_spectrum = beam_former.get_das_spectrum(R, freqs)\n",
+    "\n",
+    "                time_sec = row.audio_timestamp / 1e6\n",
+    "\n",
+    "                #### RAW\n",
+    "                raw_spectrum = combine_rows(raw_spectrum, combination_method, keepdims=True)\n",
+    "                raw_spectrum = normalize_rows(raw_spectrum, method=\"zero_to_one\")\n",
+    "\n",
+    "                raw_heatmap[:, i_col] = raw_spectrum.flatten()\n",
+    "                if dynamic_spectrum is not None:\n",
+    "                    dynamic_heatmap[:, i_col] = dynamic_spectrum.flatten()\n",
+    "                if multi_spectrum is not None:\n",
+    "                    multi_heatmap[:, i_col] = multi_spectrum.flatten()\n",
+    "                times[i_col] = time_sec\n",
+    "                orientations[i_col] = orientation_deg\n",
+    "                i_col += 1\n",
+    "\n",
+    "                if i_col >= n_columns:\n",
+    "                    break\n",
+    "\n",
+    "                p.update(i_col)\n",
+    "\n",
+    "        plot_heatmap(axs[axs_i])\n",
+    "        axs[axs_i].set_title(mic_selection)\n",
+    "        axs_i += 1\n",
+    "\n",
+    "    #fig.savefig('figures/{exp_name}_mic_selection.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# test different dynamic schemes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_results(fig, axs):\n",
+    "    axs = axs.reshape((1, 3))\n",
+    "    fig.set_size_inches(15, 5)\n",
+    "\n",
+    "    extra_kwargs = dict(\n",
+    "    color='red',\n",
+    "    lw=2\n",
+    "    )\n",
+    "\n",
+    "    times = (df.iloc[columns].audio_timestamp - df.iloc[0].audio_timestamp) / 1e6\n",
+    "    angles = BeamFormer.theta_scan * 180 / np.pi\n",
+    "\n",
+    "    start_orientation = orientations[~np.isnan(orientations)][0]\n",
+    "    raw_orientations =  start_orientation - orientations\n",
+    "    abs_orientations = np.full(orientations.shape, start_orientation)\n",
+    "\n",
+    "    if degree != 45:\n",
+    "        raw_orientations += degree\n",
+    "        abs_orientations += degree\n",
+    "        raw_orientations[raw_orientations < 0] += 360\n",
+    "        abs_orientations[abs_orientations < 0] += 360\n",
+    "\n",
+    "    axs[0, 0].pcolormesh(times, angles, raw_heatmap)\n",
+    "    axs[0, 0].plot(times, raw_orientations, **extra_kwargs)\n",
+    "    axs[0, 0].set_title('raw heatmap')\n",
+    "\n",
+    "    axs[0, 1].pcolormesh(times, angles, multi_heatmap)\n",
+    "    axs[0, 1].plot(times, abs_orientations, **extra_kwargs)\n",
+    "    axs[0, 1].set_title('multi heatmap')\n",
+    "\n",
+    "    axs[0, 2].pcolormesh(times, angles, dynamic_heatmap)\n",
+    "    axs[0, 2].plot(times, abs_orientations, **extra_kwargs)\n",
+    "    axs[0, 2].set_title('dynamic heatmap')\n",
+    "\n",
+    "    axs[0, 0].set_ylabel('angle [deg]')\n",
+    "    axs[-1, 0].set_xlabel('time [s]')\n",
+    "    axs[-1, 1].set_xlabel('time [s]')\n",
+    "    axs[-1, 2].set_xlabel('time [s]')\n",
+    "    axs[0, 0].set_ylim(0, 360)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "mic_selection = range(4)\n",
+    "\n",
+    "mic_positions = df.iloc[0].mic_positions[mic_selection, :]\n",
     "beam_former = BeamFormer(mic_positions=mic_positions)\n",
     "\n",
     "if bin_selection == \"fixed\":\n",
     "    selected_idx = [np.argmin(np.abs(df.iloc[0].frequencies - hz)) for hz in selected_hz]\n",
+    "    print(selected_idx)\n",
     "    frequencies = df.iloc[0].frequencies[selected_idx] \n",
     "    beam_former.init_dynamic_estimate(frequencies, combination_n, combination_method, normalization_method)\n",
     "    beam_former.init_multi_estimate(frequencies, combination_n)\n",
@@ -133,24 +345,29 @@
     "    # TODO(FD): implement good initialization\n",
     "    pass\n",
     "\n",
-    "n_columns = len(df) #100\n",
+    "\n",
+    "R_idx = 0; R_list = [[]] * combination_n\n",
+    "R = None\n",
+    "\n",
+    "n_columns = len(columns)\n",
     "angles = beam_former.theta_scan\n",
     "times = np.empty(n_columns)\n",
+    "orientations = np.full(n_columns, np.nan)\n",
     "raw_heatmap = np.zeros((len(angles), n_columns))\n",
     "dynamic_heatmap = np.zeros((len(angles), n_columns))\n",
     "multi_heatmap = np.zeros((len(angles), n_columns))\n",
     "\n",
     "i_col = 0\n",
-    "\n",
     "dynamic_spectrum = None\n",
     "multi_spectrum = None\n",
     "\n",
-    "print('start at degrees:', df.yaw_deg.iloc[0])\n",
     "with progressbar.ProgressBar(max_value=n_columns, redirect_stdout=True) as p:\n",
-    "    for __, row in df.iterrows():\n",
-    "        \n",
+    "    for i in columns:\n",
+    "        row = df.iloc[i]\n",
+    "\n",
     "        if bin_selection == \"fixed\":\n",
     "            signals_f = row.signals_f[:, selected_idx] # n_mics x n_freqs\n",
+    "            signals_f = signals_f[mic_selection, :]\n",
     "            freqs = row.frequencies[selected_idx]\n",
     "        else:\n",
     "            # TODO(FD): implement this\n",
@@ -158,7 +375,7 @@
     "\n",
     "        orientation_deg = row.yaw_deg\n",
     "        timestamp = row.timestamp\n",
-    "        \n",
+    "\n",
     "        R_new = beam_former.get_correlation(signals_f.T) # n_freqs x n_mics x n_mics\n",
     "        if averaging == 'iir':\n",
     "            if R is None:\n",
@@ -169,13 +386,13 @@
     "            R_list[R_idx] = R_new\n",
     "            R_idx = (R_idx + 1) % combination_n\n",
     "            R = np.mean([R_elem for R_elem in R_list if len(R_elem)], axis=0)\n",
-    "        \n",
+    "\n",
     "        if method == 'mvdr':\n",
     "            raw_spectrum = beam_former.get_mvdr_spectrum(R, freqs)\n",
     "        elif method == 'das':\n",
     "            raw_spectrum = beam_former.get_das_spectrum(R, freqs)\n",
     "        time_sec = row.audio_timestamp / 1e6\n",
-    "        \n",
+    "\n",
     "        if not pd.isna(row.yaw_deg):\n",
     "            #### DYNAMIC\n",
     "            beam_former.add_to_dynamic_estimates(raw_spectrum, orientation_deg=orientation_deg)\n",
@@ -185,12 +402,12 @@
     "\n",
     "            #### MULTI\n",
     "            beam_former.add_to_multi_estimate(signals_f.T, freqs, time_sec, orientation_deg)\n",
-    "            multi_spectrum = beam_former.get_multi_estimate(method='mvdr')\n",
+    "            multi_spectrum = beam_former.get_multi_estimate(method=method)\n",
     "            multi_spectrum = combine_rows(multi_spectrum, combination_method, keepdims=True)\n",
     "            multi_spectrum = normalize_rows(multi_spectrum, method=\"zero_to_one\")\n",
     "        else:\n",
     "            print('not updating dynamic and multi:', i_col)\n",
-    "                \n",
+    "\n",
     "        #### RAW\n",
     "        raw_spectrum = combine_rows(raw_spectrum, combination_method, keepdims=True)\n",
     "        raw_spectrum = normalize_rows(raw_spectrum, method=\"zero_to_one\")\n",
@@ -201,34 +418,16 @@
     "        if multi_spectrum is not None:\n",
     "            multi_heatmap[:, i_col] = multi_spectrum.flatten()\n",
     "        times[i_col] = time_sec\n",
+    "        orientations[i_col] = orientation_deg\n",
     "        i_col += 1\n",
     "\n",
     "        if i_col >= n_columns:\n",
     "            break\n",
-    "            \n",
-    "        p.update(i_col)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, axs = plt.subplots(1, 3)\n",
-    "fig.set_size_inches(15, 5)\n",
     "\n",
-    "times = range(raw_heatmap.shape[1])\n",
-    "angles = BeamFormer.theta_scan * 180 / np.pi\n",
+    "        p.update(i_col)\n",
     "\n",
-    "axs[0].pcolormesh(times, angles, raw_heatmap)\n",
-    "axs[0].set_title('raw heatmap')\n",
-    "\n",
-    "axs[1].pcolormesh(times, angles, multi_heatmap)\n",
-    "axs[1].set_title('multi heatmap')\n",
-    "\n",
-    "axs[2].pcolormesh(times, angles, dynamic_heatmap)\n",
-    "axs[2].set_title('dynamic heatmap')"
+    "    fig, axs = plt.subplots(1, 3, sharey=True, sharex=True)\n",
+    "    plot_results(fig, axs)"
    ]
   },
   {
@@ -247,30 +446,27 @@
    "outputs": [],
    "source": [
     "from audio_stack.beam_former import BeamFormer\n",
-    "plots = [\n",
-    "    dict(exp_name = '2020_10_30_dynamic_test', degree=0, motors=''),\n",
-    "    dict(exp_name = '2020_10_30_dynamic_test', degree=90, motors=''),\n",
-    "    dict(exp_name = '2020_10_30_dynamic_move', degree=0, motors='')\n",
-    "]\n",
+    "\n",
+    "#dict(exp_name = '2020_10_30_dynamic_test', degree=0, motors=''),\n",
+    "#dict(exp_name = '2020_10_30_dynamic_test', degree=90, motors=''),\n",
+    "#dict(exp_name = '2020_10_30_dynamic_move', degree=0, motors='')\n",
+    "#dict(exp_name = '2020_11_03_sweep', degree=90, motors=''),\n",
+    "#dict(exp_name = '2020_11_03_sweep_old', degree=90, motors=''),\n",
     "\n",
     "plots = [\n",
-    "    dict(exp_name = '2020_11_03_sweep', degree=90, motors=''),\n",
-    "    #dict(exp_name = '2020_11_03_sweep_old', degree=90, motors=''),\n",
+    "    dict(exp_name = '2020_11_10_buzzer'),\n",
     "]\n",
     "\n",
     "BeamFormer()\n",
     "\n",
     "for plot_dict in plots:\n",
-    "    \n",
     "    exp_name = plot_dict.get('exp_name')\n",
-    "    degree = plot_dict.get('degree')\n",
     "    fname = f'DynamicAnalaysis_{exp_name}.pkl'\n",
     "    df_results = pd.read_pickle(fname)\n",
     "    print('read', fname)\n",
     "    \n",
-    "    df_raw = df_results.loc[(df_results.exp_name==exp_name) & \n",
-    "                               (df_results.degree==degree)]\n",
-    "    for (motors, combination_n, method, averaging), df_chosen in df_raw.groupby(['motors', 'combination_n', 'method', 'covariance_averaging']):\n",
+    "    df_raw = df_results.loc[(df_results.exp_name==exp_name)]\n",
+    "    for (motors, degree, combination_n, method, averaging), df_chosen in df_raw.groupby(['motors', 'degree', 'combination_n', 'method', 'covariance_averaging']):\n",
     "        \n",
     "        assert len(df_chosen) == 1, len(df_chosen)\n",
     "        \n",
@@ -278,8 +474,11 @@
     "        \n",
     "        if method == 'mvdr':\n",
     "            continue\n",
+    "        if combination_n == 2:\n",
+    "            continue\n",
     "\n",
     "        plot_dict['motors'] = motors\n",
+    "        plot_dict['degree'] = degree\n",
     "        plot_dict['combination_n'] = combination_n\n",
     "        plot_dict['method'] = method\n",
     "        plot_dict['averaging'] = averaging\n",
@@ -299,30 +498,7 @@
     "        axs[2].set_title('dynamic heatmap')\n",
     "\n",
     "        axs[0].set_ylabel('angle [deg]')\n",
-    "        fig.suptitle(plot_dict)\n",
-    "        \n",
-    "    for motors, df_chosen in df_raw.groupby(['motors']):\n",
-    "        df_chosen = df_chosen.iloc[0]\n",
-    "        \n",
-    "        fig, ax = plt.subplots()\n",
-    "        fig.set_size_inches(15, 5)\n",
-    "        spec = df_chosen.spectrogram\n",
-    "        for mic_i in range(spec.shape[1]):\n",
-    "            ax.semilogy(times, np.abs(spec[0, mic_i, :]), label=f'mic{mic_i}')\n",
-    "        ax.semilogy(times, np.sum(np.abs(spec[0, :, :]), axis=0), label='total')\n",
-    "        ax.legend()\n",
-    "        fig.suptitle(f'motors: {motors}')\n",
-    "        \n",
-    "        continue\n",
-    "        fig, axs = plt.subplots(3, 2)\n",
-    "        fig.set_size_inches(15, 5)\n",
-    "        cond = df_chosen.condition_numbers\n",
-    "        ranks = df_chosen.ranks\n",
-    "        for i, label in enumerate(['raw', 'averaged', 'multi']):\n",
-    "            axs[i, 0].semilogy(times, cond[i, 0, :], label=label, color=f'C{i}')\n",
-    "            axs[i, 1].scatter(times+0.5*i, ranks[i, 0, :], label=label, color=f'C{i}')\n",
-    "            axs[i, 0].legend(loc='upper right')\n",
-    "            axs[i, 1].legend(loc='upper right')"
+    "        fig.suptitle(plot_dict)"
    ]
   },
   {
