Small notebook edits

--- a/notebooks/DynamicAnalysis.ipynb
+++ b/notebooks/DynamicAnalysis.ipynb
@@ -40,9 +40,9 @@
     "#exp_name = '2020_11_03_sweep_old'; degree=90; start_idx = 20\n",
     "#exp_name = '2020_11_03_sweep'; degree=90; start_idx = 20\n",
     "\n",
-    "#exp_name = '2020_11_10_buzzer'; degree=45; start_idx = 20\n",
+    "exp_name = '2020_11_10_buzzer'; degree=45; start_idx = 20\n",
     "#exp_name = '2020_11_10_buzzer'; degree=0; start_idx = 20\n",
-    "exp_name = '2020_11_10_buzzer'; degree=90; start_idx = 20\n",
+    "#exp_name = '2020_11_10_buzzer'; degree=0; start_idx = 20\n",
     "\n",
     "params = dict(\n",
     "    degree = degree,\n",
@@ -60,7 +60,14 @@
     "index_start = df.iloc[0]['index']\n",
     "df_pos = df_pos.loc[df_pos.index >= index_start]\n",
     "add_pose_to_df(df, df_pos)\n",
-    "df.head()"
+    "df.head()\n",
+    "\n",
+    "plt.figure()\n",
+    "i = 0\n",
+    "for mic in df.iloc[0].mic_positions:\n",
+    "    plt.scatter(mic[0], mic[1], label=f'mic{i}') \n",
+    "    i += 1\n",
+    "plt.legend()"
    ]
   },
   {
@@ -102,7 +109,7 @@
     "from audio_stack.beam_former import BeamFormer, normalize_rows, combine_rows\n",
     "import progressbar\n",
     "\n",
-    "combination_n = 10\n",
+    "combination_n = 1\n",
     "combination_method = \"sum\"\n",
     "normalization_method = \"none\"\n",
     "method = \"das\"\n",
