--- a/notebooks/DynamicStudy.ipynb
+++ b/notebooks/DynamicStudy.ipynb
@@ -59,10 +59,10 @@
     "\n",
     "baseline = 0.108  # meters, square side of mic array\n",
     "gt_distance = 10  # meters, distance of source\n",
-    "gt_angle_deg = 90 # angle of ground truth\n",
+    "gt_angle_deg = 80 # angle of ground truth\n",
     "\n",
-    "#mics_drone = get_square_array(baseline=baseline, delta=0) # 4 x 2\n",
-    "mics_drone = get_uniform_array(2, baseline=baseline) # 4 x 2\n",
+    "mics_drone = get_square_array(baseline=baseline, delta=0) # 4 x 2\n",
+    "#mics_drone = get_uniform_array(2, baseline=baseline) # 4 x 2\n",
     "mics_drone -= np.mean(mics_drone, axis=0) # center the drone\n",
     "\n",
     "gt_angle_rad = gt_angle_deg * np.pi / 180.0\n",
@@ -71,10 +71,6 @@
     "plt.figure()\n",
     "plt.scatter(*mics_drone.T)\n",
     "plt.scatter(*source)\n",
-    "plt.axis('equal')\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.scatter(*mics_drone.T)\n",
     "plt.axis('equal')\n",
     "pass"
    ]
@@ -87,14 +83,14 @@
    "source": [
     "### parameters\n",
     "n_buffer = 2048\n",
-    "angular_velocity_deg = 20 # deg/sec, velocity of drone\n",
     "time_index = 1000 # idx where signal is non-zero for all positions, found heuristically\n",
-    "degrees = np.array([0, 20, 45], dtype=np.float) # orientations\n",
+    "angular_velocity_deg = 0 # deg/sec, velocity of drone\n",
+    "times_list = np.array([0, 1], dtype=np.float) # in seconds\n",
     "frequency_desired = 600 # Hz\n",
     "\n",
     "signal_noise = 1e-3  # noise added to signals\n",
-    "mics_noise = 1e-3  # noise added to mic positions (rigid)\n",
-    "degree_noise = 5 # noise added to each degree position, in degrees\n",
+    "mics_noise = 0 #1e-3  # noise added to mic positions (rigid)\n",
+    "degree_noise = 0 #5 # noise added to each degree position, in degrees\n",
     "time_quantization = 6 # number of decimal places to keep\n",
     "time_noise = 1e-6 # noise added to recording times"
    ]
@@ -122,10 +118,8 @@
     "#signal_type = \"random\"; frequency_hz = None; \n",
     "print('chosen frequency:', frequency_hz)\n",
     "\n",
-    "if angular_velocity_deg != 0:\n",
-    "    times_list = (degrees-degrees[0])/angular_velocity_deg \n",
-    "else:\n",
-    "    times_list = np.zeros(len(degrees))\n",
+    "degrees = times_list * angular_velocity_deg\n",
+    "print('degrees:', degrees)\n",
     "print('recording times in seconds:', times_list)\n",
     "\n",
     "assert DURATION > max(times_list)\n",
@@ -185,7 +179,7 @@
     "                                duration_sec=DURATION, \n",
     "                                frequency_hz=frequency_hz, \n",
     "                                noise=signal_noise)\n",
-    "source_signal = amplify_signal(source_signal, target_dB=0)\n",
+    "#source_signal = amplify_signal(source_signal, target_dB=0)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "for mic in mics_drone:\n",
@@ -193,15 +187,14 @@
     "ax.scatter(*source)\n",
     "ax.axis('equal')\n",
     "    \n",
-    "fig, ax = plt.subplots()\n",
-    "generate_signals_pyroom(source, source_signal, mics_list[-1].T, time=1.0, noise=0, ax=ax)\n",
-    "ax.set_title('pyroom')\n",
-    "ax.set_xlim(800, 2000)\n",
+    "#fig, ax = plt.subplots()\n",
+    "#generate_signals_pyroom(source, source_signal, mics_list[-1].T, time=1.0, noise=0, ax=ax)\n",
+    "#ax.set_title('pyroom')\n",
+    "#ax.set_xlim(800, 2000)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "generate_signals(source, gt_angle_rad, mics_list[-1], frequency_hz, time=1.0, noise=0, ax=ax)\n",
-    "ax.set_title('ours')\n",
-    "ax.set_xlim(800, 2000)"
+    "ax.set_xlim(940, 1100)"
    ]
   },
   {
@@ -225,7 +218,7 @@
     "    fig, ax = plt.subplots()\n",
     "    signals_received =  generate_signals(source, gt_angle_rad, mics, frequency_hz, time, noise=signal_noise, ax=ax) \n",
     "    #signals_received = generate_signals_pyroom(source, source_signal, mics.T, time, noise=signal_noise, ax=ax)\n",
-    "    ax.set_xlim(800, 1400)\n",
+    "    ax.set_xlim(940, 1100)\n",
     "    ax.legend([f\"mic{i}\" for i in range(mics.shape[0])])\n",
     "    ax.set_title(f'signals at time {time:.3f}')\n",
     "    \n",
@@ -252,6 +245,7 @@
     "buffer_multimic = signals_multimic[:, time_index:time_index + n_buffer]\n",
     "\n",
     "fig, axs = plt.subplots(buffer_multimic.shape[0], sharex=True)\n",
+    "fig.set_size_inches(5, 10)\n",
     "for i in range(buffer_multimic.shape[0]): # n_mics\n",
     "    label=f\"mic{i}\"\n",
     "    axs[i].plot(np.arange(buffer_multimic.shape[1])/FS, buffer_multimic[i], label=label)\n",
@@ -263,7 +257,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "fig, axs = plt.subplots(buffer_multimic.shape[0], sharex=True)\n",
@@ -271,7 +267,7 @@
     "for j, (degree, buffer, time) in enumerate(zip(degrees, buffers, times_list_noisy)):\n",
     "    for i in range(buffer.shape[0]): # n_mics\n",
     "        phase_shift = from_0_to_2pi(- 2 * np.pi * time * frequency_hz) * 180 / np.pi\n",
-    "        time_shift = phase_shift / (360 * frequency_hz)\n",
+    "        time_shift = phase_shift / 360 / frequency_hz\n",
     "        print(\"phase shift in degrees\", phase_shift)\n",
     "        print(\"phase shift in time\", time_shift)\n",
     "        label = f\"rot {degree} time {time:.3f} mic{i}\"\n",
@@ -294,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# \"real\" spectrum"
+    "# \"real\" mic-array spectrum"
    ]
   },
   {
@@ -307,7 +303,6 @@
     "\n",
     "mics_array_theoretical = np.concatenate([*mics_clean])\n",
     "beam_former = BeamFormer(mic_positions=mics_array_theoretical)\n",
-    "print(mics_drone)\n",
     "angles = beam_former.theta_scan * 180 / np.pi\n",
     "\n",
     "signals_f_multimic = (np.fft.rfft(buffer_multimic).T)[indices, :]\n",
@@ -316,6 +311,9 @@
     "    frequencies = frequencies[indices]\n",
     "\n",
     "R_multimic = beam_former.get_correlation(signals_f_multimic)\n",
+    "\n",
+    "plt.matshow(np.angle(R_multimic[0, :, :]))\n",
+    "\n",
     "spectrum_multimic = beam_former.get_mvdr_spectrum(R_multimic, frequencies)\n",
     "plot_spectrum(spectrum_multimic, degree=gt_angle_deg)"
    ]
@@ -345,15 +343,14 @@
     "\n",
     "# combine the individual spectra, accounting for the orientation of the drone\n",
     "#COMBINATION_METHOD = \"sum\"\n",
-    "NORMALIZATION_METHOD = \"none\"\n",
-    "#NORMALIZATION_METHOD = \"sum_to_one\"\n",
     "#NORMALIZATION_METHOD = \"zero_to_one\"\n",
+    "NORMALIZATION_METHOD = \"none\"\n",
     "COMBINATION_METHOD = \"product\"\n",
-    "beam_former.init_dynamic_estimate(combination_n=len(degrees), \n",
+    "beam_former.init_dynamic_estimate(frequencies, \n",
+    "                                  combination_n=len(degrees), \n",
     "                                  combination_method=COMBINATION_METHOD, \n",
     "                                  normalization_method=NORMALIZATION_METHOD)\n",
     "for spectrum, degree in zip(spectra, degrees):\n",
-    "    print(degree)\n",
     "    beam_former.add_to_dynamic_estimates(spectrum, degree)\n",
     "\n",
     "spectrum_combined = beam_former.get_dynamic_estimate()"
@@ -383,7 +380,7 @@
     "# signals with delay correction\n",
     "\n",
     "beam_former = BeamFormer(mic_positions=mics_drone)\n",
-    "beam_former.init_multi_estimate(frequencies)\n",
+    "beam_former.init_multi_estimate(frequencies, combination_n=len(degrees))\n",
     "\n",
     "signals_f_list_delayed = []\n",
     "for i, (sig_f, time) in enumerate(zip(signals_f_list, times_list_noisy)):\n",
@@ -422,21 +419,13 @@
     "signals_f_tot_zero = np.empty((len(frequencies), 0))\n",
     "\n",
     "for i, (sig_f, signals_f_delayed) in enumerate(zip(signals_f_list, signals_f_list_delayed)):\n",
-    "    signals_f_tot_delay = np.c_[signals_f_tot_delay, signals_f_delayed]\n",
-    "    # for testing purposes, we also look at the spectra without compensating\n",
-    "    # for the delays.\n",
     "    signals_f_tot_zero = np.c_[signals_f_tot_zero, sig_f]\n",
     "    \n",
-    "Rtot_zero = beam_former_test.get_correlation(signals_f_tot_zero)\n",
+    "plt.matshow(np.angle(Rtot_zero[0, :, :]))\n",
     "spectrum_raw_zero = beam_former_test.get_mvdr_spectrum(Rtot_zero, frequencies)\n",
     "\n",
-    "Rtot_delay = beam_former_test.get_correlation(signals_f_tot_delay)\n",
     "\n",
-    "spectrum_raw = beam_former_test.get_mvdr_spectrum(Rtot_delay, frequencies)\n",
-    "\n",
-    "spectrum_raw_bf = beam_former.get_multi_estimate()\n",
-    "\n",
-    "np.testing.assert_allclose(spectrum_raw_bf, spectrum_raw)\n",
+    "spectrum_raw = beam_former.get_multi_estimate()\n",
     "\n",
     "plot_spectrum(spectrum_raw_bf, degree=gt_angle_deg)\n",
     "plt.title('combined raw with correct delay')\n",
