--- a/notebooks/DynamicStudy.ipynb
+++ b/notebooks/DynamicStudy.ipynb
@@ -59,10 +59,10 @@
     "\n",
     "baseline = 0.108  # meters, square side of mic array\n",
     "gt_distance = 10  # meters, distance of source\n",
-    "gt_angle_deg = 80 # angle of ground truth\n",
+    "gt_angle_deg = 50 # angle of ground truth\n",
     "\n",
-    "mics_drone = get_square_array(baseline=baseline, delta=0) # 4 x 2\n",
-    "#mics_drone = get_uniform_array(2, baseline=baseline) # 4 x 2\n",
+    "#mics_drone = get_square_array(baseline=baseline, delta=0) # 4 x 2\n",
+    "mics_drone = get_uniform_array(2, baseline=baseline) # 4 x 2\n",
     "mics_drone -= np.mean(mics_drone, axis=0) # center the drone\n",
     "\n",
     "gt_angle_rad = gt_angle_deg * np.pi / 180.0\n",
@@ -83,16 +83,24 @@
    "source": [
     "### parameters\n",
     "n_buffer = 2048\n",
-    "time_index = 1000 # idx where signal is non-zero for all positions, found heuristically\n",
-    "angular_velocity_deg = 0 # deg/sec, velocity of drone\n",
-    "times_list = np.array([0, 1], dtype=np.float) # in seconds\n",
-    "frequency_desired = 600 # Hz\n",
+    "time_index = 2000 # idx where signal is non-zero for all positions, found heuristically\n",
+    "angular_velocity_deg = 20 # deg/sec, velocity of drone\n",
+    "times_list = np.array([0, 1, 1.5], dtype=np.float) # in seconds\n",
+    "frequency_hz = 4134.375 # Hz\n",
+    "\n",
+    "# make sure times are not a multiple of period.\n",
+    "period = 1/frequency_hz\n",
+    "times_list[1:] += period/2\n",
     "\n",
     "signal_noise = 1e-3  # noise added to signals\n",
     "mics_noise = 0 #1e-3  # noise added to mic positions (rigid)\n",
     "degree_noise = 0 #5 # noise added to each degree position, in degrees\n",
-    "time_quantization = 6 # number of decimal places to keep\n",
-    "time_noise = 1e-6 # noise added to recording times"
+    "time_quantization = 10 #6 # number of decimal places to keep\n",
+    "time_noise = 0 #1e-6 # noise added to recording times\n",
+    "\n",
+    "frequencies = np.fft.rfftfreq(n_buffer, 1/FS)\n",
+    "if frequency_hz not in frequencies:\n",
+    "    raise ValueError(f'frequency_hz not in available frequency bins: {list(frequencies)}')"
    ]
   },
   {
@@ -111,12 +119,6 @@
     "from audio_stack.beam_former import rotate_mics\n",
     "\n",
     "np.random.seed(1)\n",
-    "\n",
-    "frequencies = np.fft.rfftfreq(n_buffer, 1/FS)\n",
-    "indices = [np.argmin(np.abs(frequencies - frequency_desired))]\n",
-    "frequency_hz = frequencies[indices]\n",
-    "#signal_type = \"random\"; frequency_hz = None; \n",
-    "print('chosen frequency:', frequency_hz)\n",
     "\n",
     "degrees = times_list * angular_velocity_deg\n",
     "print('degrees:', degrees)\n",
@@ -162,45 +164,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# sanity check of signal creation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "from signals import generate_signal, amplify_signal\n",
-    "source_signal = generate_signal(FS, \n",
-    "                                signal_type=\"mono\", \n",
-    "                                duration_sec=DURATION, \n",
-    "                                frequency_hz=frequency_hz, \n",
-    "                                noise=signal_noise)\n",
-    "#source_signal = amplify_signal(source_signal, target_dB=0)\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "for mic in mics_drone:\n",
-    "    ax.scatter(*mic)\n",
-    "ax.scatter(*source)\n",
-    "ax.axis('equal')\n",
-    "    \n",
-    "#fig, ax = plt.subplots()\n",
-    "#generate_signals_pyroom(source, source_signal, mics_list[-1].T, time=1.0, noise=0, ax=ax)\n",
-    "#ax.set_title('pyroom')\n",
-    "#ax.set_xlim(800, 2000)\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "generate_signals(source, gt_angle_rad, mics_list[-1], frequency_hz, time=1.0, noise=0, ax=ax)\n",
-    "ax.set_xlim(940, 1100)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# generate signals"
    ]
   },
@@ -212,18 +175,53 @@
    },
    "outputs": [],
    "source": [
-    "signals_list = []\n",
+    "from generate_results import generate_signals_analytical\n",
     "\n",
+    "buffer_list = []\n",
     "for mics, time in zip(mics_list, times_list):\n",
     "    fig, ax = plt.subplots()\n",
-    "    signals_received =  generate_signals(source, gt_angle_rad, mics, frequency_hz, time, noise=signal_noise, ax=ax) \n",
-    "    #signals_received = generate_signals_pyroom(source, source_signal, mics.T, time, noise=signal_noise, ax=ax)\n",
-    "    ax.set_xlim(940, 1100)\n",
+    "    signals_received =  generate_signals_analytical(\n",
+    "        source, gt_angle_rad, mics, frequency_hz, time, noise=signal_noise, ax=ax) \n",
+    "    ax.set_xlim(1300, 1400) \n",
     "    ax.legend([f\"mic{i}\" for i in range(mics.shape[0])])\n",
     "    ax.set_title(f'signals at time {time:.3f}')\n",
     "    \n",
-    "    signals_list.append(signals_received)\n",
-    "buffers = [signals_this[:, time_index:time_index + n_buffer] for signals_this in signals_list] "
+    "    buffers = signals_received[:, time_index:time_index + n_buffer]\n",
+    "    buffer_list.append(buffers)\n",
+    "    fig, axs = plt.subplots(signals_received.shape[0])\n",
+    "    n_plot = 50\n",
+    "    fig.suptitle(f'first {n_plot} samples of received buffers')\n",
+    "    for i, ax in enumerate(axs):\n",
+    "        ax.plot(buffers[i, :n_plot], color=f'C{i}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from audio_stack.beam_former import BeamFormer\n",
+    "\n",
+    "indices = np.where(frequencies == frequency_hz)[0]\n",
+    "for buffer, mics in zip(buffer_list, mics_list) :\n",
+    "    beam_former = BeamFormer(mic_positions=mics)\n",
+    "    \n",
+    "    buffer_f = (np.fft.rfft(buffer).T)[indices, :]\n",
+    "    \n",
+    "    R = beam_former.get_correlation(buffer_f)\n",
+    "    spectrum = beam_former.get_das_spectrum(R, np.array([frequency_hz]))\n",
+    "    #spectrum = beam_former.get_mvdr_spectrum(R, np.array([frequency_hz]))\n",
+    "    \n",
+    "    plt.figure()\n",
+    "    plt.matshow(np.angle(R[0]))\n",
+    "    plt.colorbar()\n",
+    "    \n",
+    "    #plt.figure()\n",
+    "    #plt.plot(BeamFormer.theta_scan_deg, spectrum[0, :])\n",
+    "    \n",
+    "    plt.figure()\n",
+    "    plt.polar(BeamFormer.theta_scan, spectrum[0, :])"
    ]
   },
   {
@@ -236,47 +234,74 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mics_array = np.concatenate([*mics_list])\n",
-    "signals_multimic = generate_signals(source, gt_angle_rad, mics_array, frequency_hz, time=0, noise=signal_noise)\n",
-    "#signals_multimic = generate_signals_pyroom(source, source_signal, mics_array.T, time=0, noise=signal_noise)\n",
-    "buffer_multimic = signals_multimic[:, time_index:time_index + n_buffer]\n",
-    "\n",
-    "fig, axs = plt.subplots(buffer_multimic.shape[0], sharex=True)\n",
-    "fig.set_size_inches(5, 10)\n",
-    "for i in range(buffer_multimic.shape[0]): # n_mics\n",
-    "    label=f\"mic{i}\"\n",
-    "    axs[i].plot(np.arange(buffer_multimic.shape[1])/FS, buffer_multimic[i], label=label)\n",
-    "    axs[i].set_title(label)\n",
-    "    axs[i].set_xlim(0, 0.002)\n",
-    "plt.suptitle('multi-mic signals')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "fig, axs = plt.subplots(buffer_multimic.shape[0], sharex=True)\n",
+    "mics_array = np.concatenate([*mics_list])\n",
+    "signals_multimic = generate_signals_analytical(source, gt_angle_rad, mics_array, frequency_hz, time=0, noise=signal_noise)\n",
+    "#signals_multimic = generate_signals_pyroom(source, source_signal, mics_array.T, time=0, noise=signal_noise)\n",
+    "buffer_multimic = signals_multimic[:, time_index:time_index + n_buffer]\n",
+    "\n",
+    "times = np.arange(n_plot) / FS\n",
+    "\n",
+    "fig, axs = plt.subplots(buffer_multimic.shape[0], 2, sharex=True)\n",
+    "fig.set_size_inches(10, 10)\n",
+    "for i in range(buffer_multimic.shape[0]): # n_mics\n",
+    "    label=f\"mic{i}\"\n",
+    "    axs[i, 0].plot(times, buffer_multimic[i, :n_plot], label=label, color=f\"C{i}\")\n",
+    "    axs[i, 0].set_title(label)\n",
+    "    \n",
+    "buffer_f_multimic = np.fft.rfft(buffer_multimic)[:, indices]\n",
+    "beam_former = BeamFormer(mics_array)\n",
+    "R_multimic = beam_former.get_correlation(buffer_f_multimic.T)\n",
+    "spectrum_multimic = beam_former.get_das_spectrum(R_multimic, [frequency_hz])\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.polar(BeamFormer.theta_scan, spectrum_multimic[0, :])\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.matshow(np.angle(R_multimic[0]))\n",
+    "    \n",
     "counter = 0\n",
-    "for j, (degree, buffer, time) in enumerate(zip(degrees, buffers, times_list_noisy)):\n",
+    "period = 1.0/frequency_hz\n",
+    "delta_t =  times_list[1] - times_list[0]\n",
+    "print(f'period of signal {period:.2e}')\n",
+    "print('time shift:', delta_t)\n",
+    "print(f'delta_t % period: {delta_t % period :.2e}')\n",
+    "\n",
+    "buffer_f_list = []\n",
+    "buffer_f_delayed = np.zeros(buffer_f_multimic.shape, dtype=np.complex)\n",
+    "for j, (degree, buffer, time) in enumerate(zip(degrees, buffer_list, times_list_noisy)):\n",
+    "    \n",
+    "    buffer_f = np.empty((buffer.shape[0], 1), dtype=np.complex)\n",
+    "    \n",
     "    for i in range(buffer.shape[0]): # n_mics\n",
-    "        phase_shift = from_0_to_2pi(- 2 * np.pi * time * frequency_hz) * 180 / np.pi\n",
-    "        time_shift = phase_shift / 360 / frequency_hz\n",
-    "        print(\"phase shift in degrees\", phase_shift)\n",
-    "        print(\"phase shift in time\", time_shift)\n",
-    "        label = f\"rot {degree} time {time:.3f} mic{i}\"\n",
-    "        axs[counter].axvline(time_shift)\n",
-    "        axs[counter].plot(np.arange(buffer.shape[1])/FS, buffer[i], label=label)\n",
-    "        axs[counter].set_title(label)\n",
-    "        axs[counter].set_xlim(0, 0.002)\n",
+    "        label=f\"mic{counter}\"\n",
+    "        phase_shift_deg = from_0_to_2pi(-2 * np.pi * time * frequency_hz) * 180 / np.pi\n",
+    "        time_shift = period * phase_shift_deg / 360\n",
+    "        \n",
+    "        axs[counter, 1].axvline(time_shift)\n",
+    "        axs[counter, 1].plot(times, buffer[i, :n_plot], color=f\"C{counter}\")\n",
+    "        axs[counter, 1].set_title(label)\n",
+    "        \n",
+    "        buffer_f[i, :] = np.fft.rfft(buffer[i])[indices]\n",
+    "        exp_delay = np.exp(-2j * np.pi * time * frequency_hz)\n",
+    "        buffer_f_delayed[counter] = exp_delay * buffer_f[i, :]\n",
     "        counter += 1\n",
-    "plt.suptitle('recorded signals without delay correction')"
+    "        \n",
+    "    buffer_f_list.append(buffer_f)\n",
+    "        \n",
+    "beam_former = BeamFormer(mics_array)\n",
+    "R_delayed = beam_former.get_correlation(buffer_f_delayed.T)\n",
+    "spectrum_delayed = beam_former.get_das_spectrum(R_delayed, [frequency_hz])\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.polar(BeamFormer.theta_scan, spectrum_delayed[0, :])\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.matshow(np.angle(R_delayed[0]))"
    ]
   },
   {
@@ -287,91 +312,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# \"real\" mic-array spectrum"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from audio_stack.beam_former import BeamFormer\n",
-    "\n",
-    "mics_array_theoretical = np.concatenate([*mics_clean])\n",
-    "beam_former = BeamFormer(mic_positions=mics_array_theoretical)\n",
-    "angles = beam_former.theta_scan * 180 / np.pi\n",
-    "\n",
-    "signals_f_multimic = (np.fft.rfft(buffer_multimic).T)[indices, :]\n",
-    "\n",
-    "if len(frequencies) > len(indices):\n",
-    "    frequencies = frequencies[indices]\n",
-    "\n",
-    "R_multimic = beam_former.get_correlation(signals_f_multimic)\n",
-    "\n",
-    "plt.matshow(np.angle(R_multimic[0, :, :]))\n",
-    "\n",
-    "spectrum_multimic = beam_former.get_mvdr_spectrum(R_multimic, frequencies)\n",
-    "plot_spectrum(spectrum_multimic, degree=gt_angle_deg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# combine spectra"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "beam_former = BeamFormer(mic_positions=mics_drone)\n",
-    "\n",
-    "# calculate individual spectra for each pose\n",
-    "signals_f_list = [np.fft.rfft(buffer).T for buffer in buffers] # n_frequences x 4\n",
-    "signals_f_list = [sig_f[indices, :] for sig_f in signals_f_list]\n",
-    "    \n",
-    "Rs = [beam_former.get_correlation(sig_f) for sig_f in signals_f_list]\n",
-    "#spectra = [beam_former.get_das_spectrum(R, frequencies) for R in Rs]\n",
-    "spectra = [beam_former.get_mvdr_spectrum(R, frequencies) for R in Rs]\n",
-    "\n",
-    "# combine the individual spectra, accounting for the orientation of the drone\n",
-    "#COMBINATION_METHOD = \"sum\"\n",
-    "#NORMALIZATION_METHOD = \"zero_to_one\"\n",
-    "NORMALIZATION_METHOD = \"none\"\n",
-    "COMBINATION_METHOD = \"product\"\n",
-    "beam_former.init_dynamic_estimate(frequencies, \n",
-    "                                  combination_n=len(degrees), \n",
-    "                                  combination_method=COMBINATION_METHOD, \n",
-    "                                  normalization_method=NORMALIZATION_METHOD)\n",
-    "for spectrum, degree in zip(spectra, degrees):\n",
-    "    beam_former.add_to_dynamic_estimates(spectrum, degree)\n",
-    "\n",
-    "spectrum_combined = beam_former.get_dynamic_estimate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for spectrum, degree in zip(spectra, degrees):\n",
-    "    plot_spectrum(spectrum, from_0_to_360(gt_angle_deg - degree))\n",
-    "    plt.title(f'rot {degree}')\n",
-    "\n",
-    "plot_spectrum(spectrum_combined, gt_angle_deg)\n",
-    "plt.title(f'combined spectra')\n",
-    "pass"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -379,89 +319,35 @@
    "source": [
     "# signals with delay correction\n",
     "\n",
+    "frequencies = np.array([frequency_hz])\n",
+    "\n",
     "beam_former = BeamFormer(mic_positions=mics_drone)\n",
     "beam_former.init_multi_estimate(frequencies, combination_n=len(degrees))\n",
+    "beam_former.init_dynamic_estimate(frequencies, combination_n=len(degrees), \n",
+    "                                  combination_method='product', normalization_method='none')\n",
     "\n",
     "signals_f_list_delayed = []\n",
-    "for i, (sig_f, time) in enumerate(zip(signals_f_list, times_list_noisy)):\n",
-    "    exp_factor = np.exp(1j * 2 * np.pi * frequencies * time)\n",
-    "    print('phase difference in degrees:', from_0_to_2pi(np.angle(exp_factor))*180/np.pi)\n",
-    "    signals_f_delayed = np.multiply(sig_f, exp_factor[:, np.newaxis])  # frequencies x n_mics\n",
-    "    signals_f_list_delayed.append(signals_f_delayed)\n",
+    "\n",
+    "plt.figure()\n",
+    "for i, (sig_f, time) in enumerate(zip(buffer_f_list, times_list_noisy)):\n",
+    "    beam_former.add_to_multi_estimate(sig_f.T, frequencies, time, degrees[i])\n",
     "    \n",
-    "    beam_former.add_to_multi_estimate(sig_f, frequencies, time, degrees[i])\n",
+    "    spec = beam_former.add_signals_to_dynamic_estimates(sig_f.T, frequencies, degrees[i])\n",
     "    \n",
-    "for sig_f, signals_f_delayed, time in zip(signals_f_list, signals_f_list_delayed, times_list):\n",
-    "    print(f'original phases (time={time:.3f}):', from_0_to_2pi(np.angle(sig_f)))\n",
-    "    print(f'corrected phases(time={time:.3f}):', from_0_to_2pi(np.angle(signals_f_delayed)))\n",
+    "    plt.polar(BeamFormer.theta_scan, spec[0, :])\n",
     "    \n",
-    "print('multi-mic:', from_0_to_2pi(np.angle(signals_f_multimic)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# combine raw signals"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from algos_basics import get_mic_delays\n",
+    "plt.title('shifted spectra')\n",
     "\n",
-    "beam_former_test = BeamFormer(mic_positions=mics_array_theoretical)\n",
+    "spectrum_multi = beam_former.get_multi_estimate(method='das')\n",
+    "spectrum_dynamic = beam_former.get_dynamic_estimate()\n",
     "\n",
-    "signals_f_tot_delay = np.empty((len(frequencies), 0))\n",
-    "signals_f_tot_zero = np.empty((len(frequencies), 0))\n",
+    "plt.figure()\n",
+    "plt.polar(BeamFormer.theta_scan, spectrum_multi[0, :])\n",
+    "plt.title('spectrum_multi')\n",
     "\n",
-    "for i, (sig_f, signals_f_delayed) in enumerate(zip(signals_f_list, signals_f_list_delayed)):\n",
-    "    signals_f_tot_zero = np.c_[signals_f_tot_zero, sig_f]\n",
-    "    \n",
-    "plt.matshow(np.angle(Rtot_zero[0, :, :]))\n",
-    "spectrum_raw_zero = beam_former_test.get_mvdr_spectrum(Rtot_zero, frequencies)\n",
-    "\n",
-    "\n",
-    "spectrum_raw = beam_former.get_multi_estimate()\n",
-    "\n",
-    "plot_spectrum(spectrum_raw_bf, degree=gt_angle_deg)\n",
-    "plt.title('combined raw with correct delay')\n",
-    "\n",
-    "plot_spectrum(spectrum_raw, degree=gt_angle_deg)\n",
-    "plt.title('testing: combined raw with correct delay')\n",
-    "\n",
-    "plot_spectrum(spectrum_raw_zero, degree=gt_angle_deg)\n",
-    "plt.title('testing: combined raw with zero delay')\n",
-    "pass"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# compare results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i, freq in enumerate(frequencies):\n",
-    "    plt.figure()\n",
-    "    plt.semilogy(angles, spectrum_combined[i], label='combined')\n",
-    "    plt.semilogy(angles, spectrum_raw[i], label='correct delay')\n",
-    "    plt.semilogy(angles, spectrum_raw_zero[i], label='zero delay', ls=':')\n",
-    "    plt.semilogy(angles, spectrum_multimic[i], label='multi-mic', ls=':')\n",
-    "    plt.axvline(gt_angle_deg, color='black', ls=':')\n",
-    "    plt.legend(loc='lower right')\n",
-    "    plt.title(f'frequency {freq:.2f}Hz')\n",
-    "    plt.xlabel('angle [deg]')\n",
-    "    plt.ylabel('spectrum [-]')"
+    "plt.figure()\n",
+    "plt.polar(BeamFormer.theta_scan, spectrum_dynamic[0, :])\n",
+    "plt.title('spectrum_dynamic')"
    ]
   },
   {
